public/styles/styles.css
/* Color scheme: #83E52C, #3A424A, #AD8D52
 *
 *
 */

:root {
--main-green: #83E52C;
--main-blue: #3A424A;
--main-font: 'Ubuntu', sans-serif;
--border-r: 3px;
--main-bg: url("../images/cover-image2.jpg");
--alt-bg: url("../images/cover-image1.jpg");
}

html,body {
height: 100%;
margin: 0;
padding: 0;
overflow-X: hidden;
background: white;
}

footer {
width: calc(100% - 2em);
height: 20vh;
border-top: 1px solid #e0e0e0;
padding: 1em;
padding-top: 4em;
text-align: center;
background: white;
}

footer p {
color: #e0e0e0;
font-size: 1em;
height: 50%;
line-height: 10vh;
margin: 0;
padding: 0;
text-align: center;
font-family: var(--main-font);
}

.social-links {
font-size: 2em;
color: #e0e0e0;
margin: auto;
display: block;
}

.social-links i {
display: inline-block;
}

.social-links i:nth-child(-n+2) {
margin-right: 1em;
}

#root {
width: 100%;
height: 100%;
}

/* Header styles... */

.main-header {
display: block;
position: relative;
top: 0;
padding-left: 0.5em;
padding-right: 0.5em;
box-sizing: border-box;
width: 100%;
height: 4rem;
line-height: 4rem;
text-align: center;
z-index: 1;
background-color: white;
box-shadow: 0px 0px 3px gray;
}

.main-header * {
display: inline-block;
position: relative;
}

.main-slogan {
font-size: 0.7rem;
margin: 0;
padding: 0;
width: auto;
font-family: var(--main-font);
color: var(--main-blue);
}

.main-logo, .main-logo img {
height: 80%;
vertical-align: middle;
}

.main-logo {
height: 100%; 
float: left;
}

.main-menu {
height: 100%;
width: 2.5em;
float: right;
}

.main-menu i {
font-size: 2.5rem; 
color: var(--main-blue);
height: 100%;
line-height: 1.5;
}

.main-menu__dropdown {
min-width: 150px;
position: relative;
display: block;
right: calc(150px - 2rem);
background: white;
border-radius: var(--border-r);
box-shadow: 0px 0px 10px black;
text-align: center;
animation: drop-in 0.2s ease-in;
}

.main-menu__dropdown ul {
text-align: center;
padding: 0;
}

.main-menu__dropdown li {
width: 80%;
}

.main-menu__dropdown ul > li:nth-child(1) {
border-bottom: 1px solid #e0e0e0;
}

.main-menu__dropdown a {
color: var(--main-green);
font-family: var(--main-font);
text-decoration: none;
}

.main-menu__dropdown a > i {
color: var(--main-green);
font-size: 1em;
}

@keyframes drop-in {
0% {
opacity: 0;
transform: translateY(-2em);
}
100% {
opacity: 1;
transform: translateY(0);
}
}

/* media queries */

@media screen and (width > 800px) {
footer {
text-align: center;
padding-top: 1em;
}
footer * {
display: inline-block !important;
}
.social-links {
vertical-align: middle;
margin-right: 4em;
}
footer p {
height: 100%;
line-height: 20vh;
}
}

@media screen and (width < 400px) {
.main-slogan {
display: none;
}
}

